# ai-resume-screening-system

./: .dockerignore  .env.deployment  .env.example  .env.production  .env.protected  .env.sample  .gitattributes  .gitignore  CHANGELOG.md  COMMIT_SUCCESS.md  COST_ANALYSIS.md  DEPLOYMENT.md  Dockerfile  HOUSEKEEPING_SUMMARY.md  INTEGRATION_COMPLETE.md  LOCAL_LLM_GUIDE.md  LOCAL_LLM_SUCCESS.md  PUBLISH_GUIDE.md  README.md  SECURITY.md  SECURITY_VERIFICATION.md  SETUP_COMPLETE.md  SETUP_VERIFICATION.md  TRANSFORMATION_SUMMARY.md  USAGE_PROTECTION.md  app.py  app_user_api.py  build.sh  deploy.sh  docker-compose.yml  download_fix.py  main.py  pyproject.toml  railway.toml  requirements.txt  setup.sh  setup_protection.sh  test_ai_config.py  test_comprehensive.py  test_env.py  (+11 more)
.conf/: conf-env.ps1
.github/workflows/: deploy.yml
.streamlit/: config.toml
src/: mas.py  usage_protection.py
src/agents/: _base.py
src/plugins/: resume_screening.py
src/prompts/: orchestrator.jinja
