[tool.poetry]
name = "multi-agent-presentation"
version = "0.1.0-alpha"
description = ""
authors = ["Luiz Braz <lfbraz@microsoft.com>", "Ricardo Cataldi <rcataldi@microsoft.com>"]
readme = "README.md"
packages = [{include = "src/."}]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
azure-ai-projects = "^1.0.0b4"
azure-identity = "^1.19.0"
jinja2 = "^3.1.5"
semantic-kernel = "^1.18.2"
python-pptx = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
faker = "^24.3.0"
black = {extras = ["jupyter"], version = "^24.4.2"}
pytest = "^7.4.3"
isort = "^5.13.2"
pytest-asyncio = "^0.23.6"
rouge = "^1.0.1"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.3"
poetry-plugin-export = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q -s"
testpaths = ["tests",]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = ["async: marks tests as async (select with '-m async')", "slow: marks tests as slow (select with '-m slow')"]


[tool.pylint]
fail-under = 8.5
max-line-length = 100
max-complexity=10
good-names = ["i", "j", "k", "ex", "Run", "_"]
disable = ["C0114", "C0115", "C0116", "C0301", "W3101"]
load-plugins = ["pylint.extensions.mccabe", ]


[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '(\.git | \.hg | \.mypy_cache | \.tox | \.venv | _build | buck-out | build | dist )/'


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100